<resources>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="enter_character_name">Enter Character Name</string>
    <string name="no_characters_found">No characters found!</string>
    <string name="show_all_characters">Show All Characters</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="name">Name:</string>
    <string name="year_of_birth">Year of Birth:</string>
    <string name="height">Height:</string>
    <string name="species">Species:</string>
    <string name="homeworld">Homeworld:</string>
    <string name="films">Films:</string>
    <string name="speak">speak %s</string>
    <string name="live_in">live in %s</string>
    <string name="population">with population %s</string>
    <string name="released_on">released on %s</string>
    <string name="cms">%s cms</string>
    <string name="feet_inches">%s ft  or %s inches</string>
</resources>